test/syntax/soliditypp/address/address_payable.solpp
// SPDX-License-Identifier: GPL-3.0
pragma soliditypp >=0.8.0;

contract AddressPayable {
    address payable a1 = "vite_010203040506070809080706050403020102030412227c8b71";
    address payable a2 = payable("vite_010203040506070809080706050403020102030412227c8b71");
    address a3 = a1;
}
// ----
// TypeError 7407: (115-172): Type address is not implicitly convertible to expected type address payable.